add detailed explanations for CopyOnWriteArrayList and HashMap internals